gitops/apps/api-gateway-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fitness-api-gateway-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
    cert-manager.io/acme-challenge-type: http01
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - www.fit-stack.online
    secretName: fitness-tls
  rules:
  - host: www.fit-stack.online
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: fitness-api-gateway-service
            port:
              number: 8080
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fitness-admin-coach-frontend-service
            port:
              number: 3000
